Preparations for new testnet

--- a/libraries/egenesis/egenesis_brief.cpp.tmpl
+++ b/libraries/egenesis/egenesis_brief.cpp.tmpl
@@ -17,12 +17,12 @@ ${generated_file_banner}
  * ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#include <graphene/chain/protocol/types.hpp>
-#include <graphene/egenesis/egenesis.hpp>
+#include <muse/chain/protocol/types.hpp>
+#include <muse/egenesis/egenesis.hpp>
 
-namespace graphene { namespace egenesis {
+namespace muse { namespace egenesis {
 
-using namespace graphene::chain;
+using namespace muse::chain;
 
 chain_id_type get_egenesis_chain_id()
 {
